# ocr

./: CMakeLists.txt  main.cpp  ocr_lib.cpp  ocr_lib.h
